Extract task list operations
Move task collection state behind a new TaskList class so HabpyDuck no longer manipulates ArrayList<Task> directly for add, delete, mark, unmark, reload, and size operations.

This completes the target OOP split with Ui handling console interaction, Storage handling file persistence, Parser interpreting commands, and TaskList owning task-list behavior. The UI and Storage method signatures are left stable in this increment to avoid changing console output or the save-file format while finishing the extraction.